Добавил интеграционный тест на идемпотентность при сохранении транзакции от клиента.